--- a/sturvey-app.csproj
+++ b/sturvey-app.csproj
@@ -45,8 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\DataBase.cs" />
-    <Compile Include="Data\IUnique.cs" />
+    <Compile Include="Data\Data.cs" />
     <Compile Include="main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -54,9 +53,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Surveys\Survey.cs" />
     <Compile Include="Tests\Tests.cs" />
-    <Compile Include="Users\User.cs" />
+    <Compile Include="Uniques\Uniques.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
