--- a/sturvey-app.csproj
+++ b/sturvey-app.csproj
@@ -53,6 +53,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Security\Security.cs" />
     <Compile Include="Tests\Tests.cs" />
     <Compile Include="Uniques\Uniques.cs" />
   </ItemGroup>
