Created user and survey classes description

--- a/sturvey-app.csproj
+++ b/sturvey-app.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Components\SurveyManager.cs" />
     <Compile Include="Data\Data.cs" />
     <Compile Include="main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
