--- a/sturvey-app.csproj
+++ b/sturvey-app.csproj
@@ -45,17 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Components\SurveyManager.cs" />
+    <Compile Include="Backend\Components\Components.cs" />
     <Compile Include="Data\Data.cs" />
-    <Compile Include="main.cs" />
+    <Compile Include="App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Security\Security.cs" />
-    <Compile Include="Uniques\Uniques.cs" />
+    <Compile Include="Backend\Security\Security.cs" />
+    <Compile Include="Backend\Uniques\Uniques.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
